[package]
name = "gd32vf103xx-usbd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.2"
gd32vf103xx-hal = "0.5.0"
gd32vf103-pac = "0.4.0"
riscv="0.8.0"

[dev-dependencies]
riscv-rt ="0.11"
panic-halt ="0.2"

